Animation on mobile page fix

--- a/client/app/partials/mobile/mobile.less
+++ b/client/app/partials/mobile/mobile.less
@@ -16,10 +16,17 @@
     }
     
     .mobile-advantage-marker{
-      transition: transform 0.2s ease-out;
+      -webkit-transition: transform 0.2s ease-out;
+         -moz-transition: transform 0.2s ease-out;
+           -o-transition: transform 0.2s ease-out;
+              transition: transform 0.2s ease-out;
       
       &:hover{
-        transform: rotate(10deg);
+        -webkit-transform: rotate(10deg);
+           -moz-transform: rotate(10deg);
+            -ms-transform: rotate(10deg);
+             -o-transform: rotate(10deg);
+                transform: rotate(10deg);
       }
     }
     
